--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+  <!-- version 0.2 -->
   <!-- nostalgia time-bomb challenge, bcos why not -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,17 +18,17 @@
         <div class="dev stackem">
           <a href="https://www.web.html"><img class="icon" src="img/web-icon.png" alt="wow am webzer"></a>
           <div class="text-sandwich">
-            <p class="caption">Design</p>
+            <p class="caption">Web</p>
           </div>
         </div>
         <div class="designer stackem">
-          <a href="https://www.design.html"><img class="icon" src="img/design-icon.png" alt="wowzer am dezigner"></a>
+          <a href="design.html"><img class="icon" src="img/design-icon.png" alt="wowzer am dezigner"></a>
           <div class="text-sandwich">
-            <p class="caption">Web Development</p>
+            <p class="caption">Design</p>
           </div>
           </div>
         <div class="contact stackem">
-          <img class="icon" src="/img/phone-icon.png" alt="call me beep me if you wanna meet me">
+          <img class="icon" src="img/phone-icon.png" alt="call me beep me if you wanna meet me">
           <div class="text-sandwich">
             <p class="caption">Contact</p>
           </div> 
@@ -35,7 +36,9 @@
         <a href="https://www.trash.html"></a>
       </div>
       <div class="mid-panel third"></div>
-      <div class="right-panel third"></div>
+      <div class="right-panel third">
+        <!-- ns8(); -->
+      </div>
     </div>
     <div id="section-footer">
       <div class="start-bar">
@@ -51,5 +54,4 @@
 </body>
 </html>
 
-</script>
 </head>
