updated clock, added my computer button, added root window media querey

--- a/design.html
+++ b/design.html
@@ -1,5 +1,6 @@
 <html lang="en">
 <head>
+  <!-- A poem about my relationship with Design -->
   <!-- photoshop is my side piece, my first love -->
   <!-- illustrator has my loyalty, that new gradient tool got me rubbernecking -->
   <!-- indesign is now my main, she's stolen the spotlight for now  -->
@@ -43,8 +44,13 @@
     </div>
     <div id="section-footer">
       <div class="start-bar">
-        <div class="start-button">
-          <p class="start-text">start</p>
+        <div class="start-bar-button-wrapper">
+          <div class="start-button">
+            <p class="start-text">start</p>
+          </div>
+          <div class="my-computer-button">
+            <p class="my-computer-text">My Computer</p>
+          </div>
         </div>
         <div id="clock"></div>
       </div>
