this is most fun ever

--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <html lang="en">
 <head>
-  <!-- version 0.2 -->
-  <!-- nostalgia time-bomb challenge, bcos why not -->
+  <!-- version 0.1 -->
+  <!-- nostalgia time-bomb challenge, bcos y not :)) -->
+  <!-- RULES:
+  # no plugins
+  # no frameworks
+  # vanilla icecream, minus floats. bcos fizzy drinks and icecream should just not go together. ever. 
+  never again.
+  -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
-  <title>mariawenrose</title>
+  <title>hi welcome to mtv cribs</title>
 </head>
 <body onload="startTime()">
   <div class="container">
@@ -16,13 +22,13 @@
     <div id="section-body">
       <div class="left-panel third">
         <div class="dev stackem">
-          <a href="https://www.web.html"><img class="icon" src="img/web-icon.png" alt="wow am webzer"></a>
+          <a href="web.html"><img class="icon" src="img/web-icon.png" alt="wow am webzer"></a>
           <div class="text-sandwich">
             <p class="caption">Web</p>
           </div>
         </div>
         <div class="designer stackem">
-          <a href="design.html"><img class="icon" src="img/design-icon.png" alt="wowzer am dezigner"></a>
+          <img class="icon" src="img/design-icon.png" alt="wowzer am dezigner">
           <div class="text-sandwich">
             <p class="caption">Design</p>
           </div>
@@ -37,7 +43,7 @@
       </div>
       <div class="mid-panel third"></div>
       <div class="right-panel third">
-        <!-- ns8(); -->
+        <!-- ns8 to go here(); -->
       </div>
     </div>
     <div id="section-footer">
