--- a/web.html
+++ b/web.html
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
 
   <meta charset="UTF-8">
@@ -6,53 +7,53 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/style.css">
   <title>mariawenrose | Web </title>
+  <!-- <p>Please Note: Icons are not owned or designed by me</p> -->
 </head>
+
 <body onload="startTime()">
   <div class="container">
-      <a href="index.html"><img class="icon trash-icon" src="img/trash-icon.png" alt="easter egg"></a>
-    <div id="section-body-design">
-      <div class="design-left-panel">
-        <div id="root-folder-window">
-          <div class="root-window-top">
-            <p class="folder-nav-text">
-              My Computer | Web Portfolio
-            </p>
-            <div class="root-window-icons">
-              <div class="question-mark-icon">
-                <p class="root-window-icon">?</p>
-              </div>
-              <div class="exit-icon">
-                <p class="root-window-icon">X</p>
-              </div>
-            </div>
+    <a href="index.html"><img class="icon trash-icon" src="img/trash-icon.png" alt="easter egg"></a>
+    <div id="root-folder-window">
+      <div class="root-window-top">
+        <p class="folder-nav-text">
+          My Computer | Github Projects
+        </p>
+        <div class="root-window-icons">
+          <div class="question-mark-icon">
+            <p class="root-window-icon">?</p>
           </div>
-          <div class="root-window-bottom">
-            <ul>
-              <div class="list-wrapper">
-                <img class="mini-icon" src="./img/interweb-icon.png" alt="interwebs">
-                <li>Wordpress Custom Theme</li>
-              </div>
-            </ul>
+          <div class="exit-icon">
+            <p class="root-window-icon">X</p>
           </div>
         </div>
       </div>
+      <div class="root-window-bottom">
+        <ul>
+          <div class="list-wrapper">
+            <img class="mini-icon" src="./img/interweb-icon.png" alt="interwebs">
+            <li>Wordpress Custom Themes</li>
+          </div>
+        </ul>
+      </div>
     </div>
+
   </div>
   <div id="section-footer">
     <div class="start-bar">
       <div class="start-bar-button-wrapper">
-        <div class="start-button">
+        <!-- <div class="start-button">
           <p class="start-text">start</p>
-        </div>
-        <div class="my-computer-button">
+        </div> -->
+        <!-- <div class="my-computer-button">
           <p class="my-computer-text">My Computer</p>
-        </div>
+        </div> -->
       </div>
       <div id="clock"></div>
     </div>
-  </div>  
+  </div>
   <script src="js/main.js"></script>
 </body>
+
 </html>
 
 </head>
