--- a/web.html
+++ b/web.html
@@ -28,30 +28,53 @@
         </div>
       </div>
       <div class="root-window-bottom">
-        <ul>
-          <div class="list-wrapper">
-            <img class="mini-icon" src="./img/interweb-icon.png" alt="interwebs">
-            <li>Wordpress Custom Themes</li>
-          </div>
-        </ul>
-      </div>
-    </div>
 
-  </div>
-  <div id="section-footer">
-    <div class="start-bar">
-      <div class="start-bar-button-wrapper">
-        <!-- <div class="start-button">
-          <p class="start-text">start</p>
-        </div> -->
-        <!-- <div class="my-computer-button">
-          <p class="my-computer-text">My Computer</p>
-        </div> -->
+        <div class="list-wrapper">
+
+          <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Behance API App</h3>
+              <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
+            </div>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Views Fullstack</h3>
+              <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
+            </div>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Team Rocket JS</h3>
+              <p class="project-tag">Tags: #react, #collab</p>
+            </div>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Wordpress Theme</h3>
+              <p class="project-tag">Tags: #php, #custom-theme</p>
+            </div>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Orbs CSS</h3>
+              <p class="project-tag">Tags: #css, #animation</p>
+            </div>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Flip Tiles CSS</h3>
+              <p class="project-tag">Tags: #css, #animation</p>
+            </div>
+
+          </div>
+        </div>
       </div>
-      <div id="clock"></div>
+
     </div>
-  </div>
-  <script src="js/main.js"></script>
+    <div id="section-footer">
+      <div class="start-bar">
+        <div class="start-bar-button-wrapper">
+        </div>
+        <div id="clock"></div>
+      </div>
+    </div>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
