--- a/web.html
+++ b/web.html
@@ -31,50 +31,67 @@
 
         <div class="list-wrapper">
 
+          <a class="anchor-links" href="https://github.com/mariawenrose/Method">
           <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
-              <h3>Behance API App</h3>
-              <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
-            </div>
-            <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
-              <h3>Views Fullstack</h3>
-              <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
-            </div>
-            <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
-              <h3>Team Rocket JS</h3>
-              <p class="project-tag">Tags: #react, #collab</p>
-            </div>
-            <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
-              <h3>Wordpress Theme</h3>
-              <p class="project-tag">Tags: #php, #custom-theme</p>
-            </div>
+            <img class="project-icon" src="/img/project-icon.png" alt="">
+            <h3>Behance API App</h3>
+            <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
+          </div>
+        </a>
+
+        <a class="anchor-links" href="https://github.com/mariawenrose/views">
+          <div class="project-tile">
+            <img class="project-icon" src="/img/project-icon.png" alt="">
+            <h3>Views Fullstack</h3>
+            <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
+          </div>
+        </a>
+
+        <a class="anchor-links" href="https://github.com/mariawenrose/Team-Rocket">
+          <div class="project-tile">
+            <img class="project-icon" src="/img/project-icon.png" alt="">
+            <h3>Team Rocket JS</h3>
+            <p class="project-tag">Tags: #react, #collab</p>
+          </div>
+        </a>
+
+        <a class="anchor-links" href="https://github.com/mariawenrose/regina-tours-wp">
+          <div class="project-tile">
+            <img class="project-icon" src="/img/project-icon.png" alt="">
+            <h3>Wordpress Theme</h3>
+            <p class="project-tag">Tags: #php, #custom-theme</p>
+          </div>
+        </a>
+
+          <a class="anchor-links" href="https://mariawenrose.github.io/orbs/">
             <div class="project-tile">
               <img class="project-icon" src="/img/project-icon.png" alt="">
               <h3>Orbs CSS</h3>
               <p class="project-tag">Tags: #css, #animation</p>
             </div>
-            <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
-              <h3>Flip Tiles CSS</h3>
-              <p class="project-tag">Tags: #css, #animation</p>
-            </div>
+          </a>
 
+   <a class="anchor-links" href="">
+          <div class="project-tile">
+            <img class="project-icon" src="/img/project-icon.png" alt="">
+            <h3>Flip Tiles CSS</h3>
+            <p class="project-tag">Tags: #css, #animation</p>
           </div>
-        </div>
-      </div>
+        </a>
 
-    </div>
-    <div id="section-footer">
-      <div class="start-bar">
-        <div class="start-bar-button-wrapper">
         </div>
-        <div id="clock"></div>
       </div>
     </div>
-    <script src="js/main.js"></script>
+
+  </div>
+  <div id="section-footer">
+    <div class="start-bar">
+      <div class="start-bar-button-wrapper">
+      </div>
+      <div id="clock"></div>
+    </div>
+  </div>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
