ready for github pages

--- a/web.html
+++ b/web.html
@@ -32,36 +32,36 @@
         <div class="list-wrapper">
 
           <a class="anchor-links" href="https://github.com/mariawenrose/Method">
-          <div class="project-tile">
-            <img class="project-icon" src="/img/project-icon.png" alt="">
-            <h3>Behance API App</h3>
-            <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
-          </div>
-        </a>
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Behance API App</h3>
+              <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
+            </div>
+          </a>
 
-        <a class="anchor-links" href="https://github.com/mariawenrose/views">
-          <div class="project-tile">
-            <img class="project-icon" src="/img/project-icon.png" alt="">
-            <h3>Views Fullstack</h3>
-            <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
-          </div>
-        </a>
+          <a class="anchor-links" href="https://github.com/mariawenrose/views">
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Views Fullstack</h3>
+              <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
+            </div>
+          </a>
 
-        <a class="anchor-links" href="https://github.com/mariawenrose/Team-Rocket">
-          <div class="project-tile">
-            <img class="project-icon" src="/img/project-icon.png" alt="">
-            <h3>Team Rocket JS</h3>
-            <p class="project-tag">Tags: #react, #collab</p>
-          </div>
-        </a>
+          <a class="anchor-links" href="https://github.com/mariawenrose/Team-Rocket">
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Team Rocket JS</h3>
+              <p class="project-tag">Tags: #react, #collab</p>
+            </div>
+          </a>
 
-        <a class="anchor-links" href="https://github.com/mariawenrose/regina-tours-wp">
-          <div class="project-tile">
-            <img class="project-icon" src="/img/project-icon.png" alt="">
-            <h3>Wordpress Theme</h3>
-            <p class="project-tag">Tags: #php, #custom-theme</p>
-          </div>
-        </a>
+          <a class="anchor-links" href="https://github.com/mariawenrose/regina-tours-wp">
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Wordpress Theme</h3>
+              <p class="project-tag">Tags: #php, #custom-theme</p>
+            </div>
+          </a>
 
           <a class="anchor-links" href="https://mariawenrose.github.io/orbs/">
             <div class="project-tile">
@@ -71,13 +71,17 @@
             </div>
           </a>
 
-   <a class="anchor-links" href="">
-          <div class="project-tile">
-            <img class="project-icon" src="/img/project-icon.png" alt="">
-            <h3>Flip Tiles CSS</h3>
-            <p class="project-tag">Tags: #css, #animation</p>
-          </div>
-        </a>
+          <a class="anchor-links" href="https://mariawenrose.github.io/flip-tiles/">
+            <div class="project-tile">
+              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <h3>Flip Tiles CSS</h3>
+              <p class="project-tag">Tags: #css, #animation</p>
+            </div>
+          </a>
+
+          <a id="profile-link" class="" href="https://github.com/mariawenrose">
+            <p>Github:mariawenrose</p>
+          </a>
 
         </div>
       </div>
