--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
           <a class="anchor-links" href="https://github.com/mariawenrose/Method">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Behance API App</h3>
               <p class="project-tag">Tags: #react, #api, #collab, #behance</p>
             </div>
@@ -41,7 +41,7 @@
 
           <a class="anchor-links" href="https://github.com/mariawenrose/views">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Views Fullstack</h3>
               <p class="project-tag">Tags: #aws, #mysql, #express, #knex</p>
             </div>
@@ -49,7 +49,7 @@
 
           <a class="anchor-links" href="https://github.com/mariawenrose/Team-Rocket">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Team Rocket JS</h3>
               <p class="project-tag">Tags: #react, #collab</p>
             </div>
@@ -57,7 +57,7 @@
 
           <a class="anchor-links" href="https://github.com/mariawenrose/regina-tours-wp">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Wordpress Theme</h3>
               <p class="project-tag">Tags: #php, #custom-theme</p>
             </div>
@@ -65,7 +65,7 @@
 
           <a class="anchor-links" href="https://mariawenrose.github.io/orbs/">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Orbs CSS</h3>
               <p class="project-tag">Tags: #css, #animation</p>
             </div>
@@ -73,7 +73,7 @@
 
           <a class="anchor-links" href="https://mariawenrose.github.io/flip-tiles/">
             <div class="project-tile">
-              <img class="project-icon" src="/img/project-icon.png" alt="">
+              <img class="project-icon" src="img/project-icon.png" alt="">
               <h3>Flip Tiles CSS</h3>
               <p class="project-tag">Tags: #css, #animation</p>
             </div>
